add contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,7 +214,7 @@ right: 140px;
     width: 400px;
     height: 400px;
 }
-.contact-info div1{
+.contact-info div{
     width: 410px;
     display: inline-block;
     vertical-align: top;
