--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 header {
     padding: 20px 35px;
-    background-color: #39a6b2
+    background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 body {
     font-family: Helvetica, Arial, sans-serif;
@@ -20,9 +23,9 @@ header a{
     color: #fce138;
 }
 header nav {
-    float: right;
     margin: 7px 0;
 }
+
 header nav ul li {
     display: inline;
 }
@@ -36,7 +39,7 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
+    
 }
 * {
     margin: 0;
