--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,11 +53,13 @@ header h1 {
     margin: 0;
     
 }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 footer {
     background: #fce138;
     width: 100%;
@@ -66,11 +68,13 @@ footer {
     justify-content: space-between;
     flex-wrap: wrap;
 }
+
 footer h2 {
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
+
 footer div {
     line-height: 1.5;
     text-align: right;
@@ -80,7 +84,7 @@ footer a {
     color: #024e76;
 }
 
-section {
+.section {
     padding: 60px;
 }
 /* Hero Style Start */
@@ -225,23 +229,27 @@ margin: 3.5%;
 }
 
 .trainers {
-   
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
-.trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+
+.trainer { 
+    margin: 20px;
     background: #024e76;
     color: #fce138;
-    overflow: auto;
+    flex: 1;
 }
+
 .trainer img {
-    width: 35%;
-    float: left;
+    width: 100%;
 }
+
 .trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
+    padding: 25px;
+    line-height: 1.3;
 }
 
 .text-left {
@@ -252,28 +260,32 @@ margin: 3.5%;
     text-align: right;
 }
 .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
+    font-size: 28px;
 }
+
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
+    font-size: 22px;
+    margin-bottom: 15px;
 }
+
 .trainer-bio p {
     font-size: 17px;
-    line-height: 1.3;
 }
+
 .contact {
     background: #024e76;
 }
+
 .contact h2 {
     color: #fce138;
 }
+
 .contact-info iframe {
     width: 400px;
     height: 400px;
 }
+
 .contact-info div{
     width: 410px;
     display: inline-block;
@@ -282,10 +294,12 @@ margin: 3.5%;
     margin: 30px 0 0 60px;
     color: white;
 }
+
 .contact-info h3 {
     color: #fce138;
     font-size: 32px;
 }
+
 .contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
@@ -296,6 +310,7 @@ margin: 3.5%;
 .contact-info a {
     color: #fce138;
 }
+
 .hero-secondary {
     background-color: black;
     color: red;
