--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,13 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
 }
 body {
     font-family: Helvetica, Arial, sans-serif;
@@ -14,6 +21,7 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin:0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header a{
     color: #fce138;
@@ -40,11 +48,18 @@ header nav ul li {
     justify-content: space-between;
     align-items: center;
     list-style: none;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+}
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 header h1 {
     font-weight: bold;
@@ -91,20 +106,23 @@ footer a {
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap; 
-    align-items: flex-start;   
+    align-items: flex-start;
+    background-attachment: fixed;   
 }
 
 .hero-form {
 border: 3px solid #024e76;
-background-color: #fce138;
+background-color: rgba(252, 225, 56, 0.8);
 padding: 20px;
 color: #024e76;
 width: 40%;
 margin: 3.5%;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -123,6 +141,7 @@ margin: 3.5%;
     color: #fff;
     font-size: 18px;
     line-height: 1.2;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-cta h2 {
@@ -139,6 +158,13 @@ margin: 3.5%;
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+.form-input:focus {
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
 }
 
 .hero-form label {
@@ -150,6 +176,10 @@ margin: 3.5%;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
+}
+.hero-form button:hover {
+    background-color: #39a6b2;
 }
 /* Hero Style End */
 
@@ -213,11 +243,14 @@ margin: 3.5%;
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+
+.step:not(last-child) {
+    border-bottom: 1px solid #39a6b2;
 }
 
 .step-img {
@@ -311,6 +344,13 @@ margin: 3.5%;
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
 }
 
 .contact-form button {
@@ -321,6 +361,12 @@ margin: 3.5%;
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+}
+
+.contact-form button:hover {
+    color: #fce138;
+    background-color: #39a6b2;
 }
 
 .contact-info a {
@@ -352,6 +398,7 @@ margin: 3.5%;
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
     header h1 {
         width: 100%;
